syntax = "proto3";

package proto;

option go_package = "./proto";

import "google/protobuf/timestamp.proto";

service AggregateScores {
  rpc SendAggregateScores (AggregateScoresRequest) returns (AggregateScoresReply) {}
}

service TicketScores {
  rpc SendTicketScores (TicketScoresRequest) returns (TicketScoresReply) {}
}

service OverallScore {
  rpc SendOverallScore (OverallScoreRequest) returns (OverallScoreReply) {}
}

service ChangeInScore {
  rpc SendChangeInScore (ChangeInScoreRequest) returns (ChangeInScoreReply) {}
}

message AggregateScoresRequest {
    google.protobuf.Timestamp date_start = 1;
    google.protobuf.Timestamp date_end = 2;
}

message TicketScoresRequest {
    google.protobuf.Timestamp date_start = 1;
    google.protobuf.Timestamp date_end = 2;
}

message OverallScoreRequest {
    google.protobuf.Timestamp date_start = 1;
    google.protobuf.Timestamp date_end = 2;
}

message ChangeInScoreRequest {
    google.protobuf.Timestamp from_date_start = 1;
    google.protobuf.Timestamp from_date_end = 2;
    google.protobuf.Timestamp to_date_start = 3;
    google.protobuf.Timestamp to_date_end = 4;
}

message AggregateScoresReply {
    repeated AggregateScoresCategory categories = 1;
}

message AggregateScoresCategory {
    string category = 1;
    int32 ratings = 2;
    repeated AggregateScoresCategoriesDate dates = 3;
    double score = 4;
}

message AggregateScoresCategoriesDate {
    double percentage = 1;
    string date = 2;
}

message TicketScoresReply {
    repeated TicketScoresItem tickets = 1;
}

message TicketScoresItem {
    int32 id = 1;
    repeated TicketScoresCategory categories = 2;
}

message TicketScoresCategory {
    string name = 1;
    double percentage = 2;
}

message OverallScoreReply {
    double score = 1;
}

message ChangeInScoreReply {
    double change = 1;
}